gotify/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotify
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      nodeSelector:
        storage: longhorn
      containers:
        - name: gotify
          image: docker.io/gotify/server:3.1.1
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify
