gotify/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gotify
  name: gotify
  namespace: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
