gotify/gotify.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotify
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:2.6.1
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gotify
  name: gotify
  namespace: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.mandariini.uk`)
      kind: Rule
      services:
        - name: gotify
          port: 80
  tls:
    secretName: mandariini-uk-tls
