gotify/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.mandariini.uk`)
      kind: Rule
      services:
        - name: gotify
          namespace: gotify
          port: 80
  tls:
    secretName: mandariini-uk-tls
